# schedule-tgbot

./: .gitignore  Makefile  README.md  pyproject.toml
schedule_tgbot/: keyboards.py  main.py  schedule.py  settings.py
