[tool.poetry]
name = "schedule-tgbot"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"
packages = [{include = "schedule_tgbot"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
